@@ -182,7 +182,7 @@ public class LinearCalibration extends javax.swing.JPanel {
                 while ((line = br.readLine()) != null) {
                     if (line.matches("^\\s*[0-9]*(\\.[0-9]*)?\\s*(,.*)?$")) {
                         String[] data = line.split(",",2);
-                        tm.setValueAt(new Double(data[0]), editRow++, 0);
+                        tm.setValueAt(Double.valueOf(data[0]), editRow++, 0);
                     }
                 }
             } catch (IOException ex) {
